syntax = "proto3";

import "common/user.proto";
import "common/request-info.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.crazynerve.chatter.gateway.protos";

message UserSignUpEvent {
  string event = 1;
  google.protobuf.Timestamp timeStamp = 2;
  common.UserDetails userDetails = 3;
  common.RequestInfo requestInfo = 4;
}

